Add.Table form Created

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 <!-- HTML table -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width-device-widith ,initial-scale=1.0">
+    <title>Html-Table-Form</title>
+  </head>
+  <body>
+    <!-- Table form -->
+
+
+    
+    <table>
+        <tr>
+          <th>S.No</th>
+          <th>Name</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Nagaraj S</td>
+        </tr>
+    </table>
+  </body>
+</html>
