Table border created

--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
   <head>
     <meta name="viewport" content="width-device-widith ,initial-scale=1.0">
     <title>Html-Table-Form</title>
+    <link rel="stylesheet" href="asset/css/style.css">
   </head>
   <body>
     <!-- Table form -->
 
 
     
-    <table>
+    <table class="newtable">
         <tr>
           <th>S.No</th>
           <th>Name</th>
         </tr>
-        <tr>
+        <tr class="h1">
           <td>1</td>
           <td>Nagaraj S</td>
+        </tr>
+        <tr class="h2">
+          <td>2</td>
+          <td>Sureka Nai</td>
         </tr>
     </table>
   </body>
